Add html scaffolding

--- a/index.html
+++ b/index.html
@@ -10,7 +10,24 @@
 </head>
 
 <body>
-    <h1>Link Test Red</h1>
+    <div class="main-container">
+        <div class="header">
+            <div class="search-bar"></div>
+            <div class="acct-info"></div>
+            <div class="greeting"></div>
+            <div class="actions"></div>
+        </div>
+        <div class="sidebar">
+            <div class="title"></div>
+            <div class="group-1"></div>
+            <div class="group-2"></div>
+        </div>
+        <div class="dashboard">
+            <div class="project-cards"></div>
+            <div class="announcements"></div>
+            <div class="trending"></div>
+        </div>
+    </div>
 </body>
 
 </html>
