Add sidebar content

--- a/index.html
+++ b/index.html
@@ -18,9 +18,26 @@
             <div class="actions"></div>
         </div>
         <div class="sidebar">
-            <div class="title"></div>
-            <div class="group-1"></div>
-            <div class="group-2"></div>
+            <div class="title">
+                <img src="./img/dashboard-icon.svg" alt=""> Dashboard
+            </div>
+            <div class="group-1">
+                <ul>
+                    <li><img src="./img/home-icon.svg" alt="">Home</li>
+                    <li><img src="./img/profile-icon.svg" alt="">Profile</li>
+                    <li><img src="./img/messages-icon.svg" alt="">Messages</li>
+                    <li><img src="./img/history-icon.svg" alt="">History</li>
+                    <li><img src="./img/tasks-icon.svg" alt="">Tasks</li>
+                    <li><img src="./img/communities-icon.svg" alt="">Communities</li>
+                </ul>
+            </div>
+            <div class="group-2">
+                <ul>
+                    <li><img src="./img/settings-icon.svg" alt="">Settings</li>
+                    <li><img src="./img/support-icon.svg" alt="">Support</li>
+                    <li><img src="./img/privacy-icon.svg" alt="">Privacy</li>
+                </ul>
+            </div>
         </div>
         <div class="dashboard">
             <div class="project-cards"></div>
