Add basic styling to sidebar

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div class="actions"></div>
         </div>
         <div class="sidebar">
-            <div class="title">
+            <div class="sidebar-title">
                 <img src="./img/dashboard-icon.svg" alt=""> Dashboard
             </div>
             <div class="group-1">
