Add content to html header, add acct icon assets

--- a/index.html
+++ b/index.html
@@ -12,10 +12,25 @@
 <body>
     <div class="main-container">
         <div class="header">
-            <div class="search-bar"></div>
-            <div class="acct-info"></div>
-            <div class="greeting"></div>
-            <div class="actions"></div>
+            <div class="search-bar">
+                <img src="./img/search-icon.svg" alt="">
+                <input type="search">
+            </div>
+            <div class="acct-info">
+                <img src="./img/notification-icon.svg" alt="">
+                <img src="./img/man1.png" alt="">
+                Morgan Oakley
+            </div>
+            <div class="greeting">
+                <img src="./img/man1.png" alt="">
+                <p>Hi there,</p>
+                <p>Morgan Oakley (@morgan)</p>
+            </div>
+            <div class="actions">
+                <button class="btn">New</button>
+                <button class="btn">Upload</button>
+                <button class="btn">Share</button>
+            </div>
         </div>
         <div class="sidebar">
             <div class="sidebar-title">
