--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
             </div>
             <div class="acct-info">
                 <img src="./img/notification-icon.svg" alt="">
-                <img src="./img/man1.png" alt="">
+                <img class="acct-img sm" src="./img/man1.png" alt="">
                 Morgan Oakley
             </div>
             <div class="greeting">
-                <img src="./img/man1.png" alt="">
+                <img class="acct-img lg" src="./img/man1.png" alt="">
                 <p>Hi there,</p>
                 <p>Morgan Oakley (@morgan)</p>
             </div>
@@ -34,7 +34,8 @@
         </div>
         <div class="sidebar">
             <div class="sidebar-title">
-                <img src="./img/dashboard-icon.svg" alt=""> Dashboard
+                <img src="./img/dashboard-icon.svg" alt="">
+                <h1>Dashboard</h1>
             </div>
             <div class="group-1">
                 <ul>
@@ -54,10 +55,87 @@
                 </ul>
             </div>
         </div>
-        <div class="dashboard">
-            <div class="project-cards"></div>
-            <div class="announcements"></div>
-            <div class="trending"></div>
+        <div class="dashboard-area">
+            <div class="projects-area">
+                <h2>Your Projects</h2>
+                <div class="project card">
+                    <h3>Super Cool Project</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit atque accusantium corporis at aspernatur maiores modi nisi expedita rerum, sunt iste voluptate placeat accusamus dicta, quisquam, nesciunt ullam autem perspiciatis.</p>
+                    <img src="./img/add-favorites-icon.svg" alt="">
+                    <img src="./img/add-watchlist-icon.svg" alt="">
+                    <img src="./img/fork-icon.svg" alt="">
+                </div>
+                <div class="project card">
+                    <h3>Less Cool Project</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit atque accusantium corporis at aspernatur maiores modi nisi expedita rerum, sunt iste voluptate placeat accusamus dicta, quisquam, nesciunt ullam autem perspiciatis.</p>
+                    <img src="./img/add-favorites-icon.svg" alt="">
+                    <img src="./img/add-watchlist-icon.svg" alt="">
+                    <img src="./img/fork-icon.svg" alt="">
+                </div>
+                <div class="project card">
+                    <h3>Impossible App</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit atque accusantium corporis at aspernatur maiores modi nisi expedita rerum, sunt iste voluptate placeat accusamus dicta, quisquam, nesciunt ullam autem perspiciatis.</p>
+                    <img src="./img/add-favorites-icon.svg" alt="">
+                    <img src="./img/add-watchlist-icon.svg" alt="">
+                    <img src="./img/fork-icon.svg" alt="">
+                </div>
+                <div class="project card">
+                    <h3>Easy Peasy App</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit atque accusantium corporis at aspernatur maiores modi nisi expedita rerum, sunt iste voluptate placeat accusamus dicta, quisquam, nesciunt ullam autem perspiciatis.</p>
+                    <img src="./img/add-favorites-icon.svg" alt="">
+                    <img src="./img/add-watchlist-icon.svg" alt="">
+                    <img src="./img/fork-icon.svg" alt="">
+                </div>
+                <div class="project card">
+                    <h3>Ad Blocker</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit atque accusantium corporis at aspernatur maiores modi nisi expedita rerum, sunt iste voluptate placeat accusamus dicta, quisquam, nesciunt ullam autem perspiciatis.</p>
+                    <img src="./img/add-favorites-icon.svg" alt="">
+                    <img src="./img/add-watchlist-icon.svg" alt="">
+                    <img src="./img/fork-icon.svg" alt="">
+                </div>
+                <div class="project card">
+                    <h3>Money Maker</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit atque accusantium corporis at aspernatur maiores modi nisi expedita rerum, sunt iste voluptate placeat accusamus dicta, quisquam, nesciunt ullam autem perspiciatis.</p>
+                    <img src="./img/add-favorites-icon.svg" alt="">
+                    <img src="./img/add-watchlist-icon.svg" alt="">
+                    <img src="./img/fork-icon.svg" alt="">
+                </div>
+            </div>
+            <div class="announcements-area">
+                <h2>Announcements</h2>
+                <div class="announcements card">
+                    <h3>Site Maintenance</h3>
+                    <p>Vestibulum condimentum tellus lacus, in accumsan elit maximus ec. Donec hendrerit sodales congue...</p>
+                    <h3>Community Share Day</h3>
+                    <p>Nam vel lectus tincidunt, rutrum nulla eu, ornare libero. Aliquam dictum accumsan porttitor...</p>
+                    <h3>Update Privacy Policy</h3>
+                    <p>Phasellus efficitur nisi eget elit consectetur, eget condimentum ante auctor. Cras fingilla sagittis seem in mattis...</p>
+                </div>
+            </div>
+            <div class="trending-area">
+                <div class="trending card">
+                    <div class="user">
+                        <img class="acct-img sm" src="./img/woman1.png" alt="">
+                        <div class="usr-handle">@tegan</div>
+                        <div class="usr-title">World Peace Builder</div>
+                    </div>
+                    <div class="user">
+                        <img class="acct-img sm" src="./img/man1.png" alt="">
+                        <div class="usr-handle">@morgan</div>
+                        <div class="usr-title">Super Cool Project</div>
+                    </div>
+                    <div class="user">
+                        <img class="acct-img sm" src="./img/woman2.png" alt="">
+                        <div class="usr-handle">@kendall</div>
+                        <div class="usr-title">Life Changing App</div>
+                    </div>
+                    <div class="user">
+                        <img class="acct-img sm" src="./img/man2.png" alt="">
+                        <div class="usr-handle">@alex</div>
+                        <div class="usr-title">No Traffic Maker</div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </body>
