--- a/index.html
+++ b/index.html
@@ -10,156 +10,154 @@
 </head>
 
 <body>
-    <div class="main-container">
-        <div class="header">
-            <div class="header-top">
-                <div class="search-bar">
-                    <img src="./img/search-icon.svg" alt="">
-                    <input type="search">
+    <div class="header">
+        <div class="header-top">
+            <div class="search-bar">
+                <img class="icon" src="./img/search-icon.svg" alt="">
+                <input type="search">
+            </div>
+            <div class="acct-info">
+                <img class="icon" src="./img/notification-icon.svg" alt="">
+                <img class="acct-img sm" src="./img/man1.png" alt="">
+                <p>Morgan Oakley</p>
+            </div>
+        </div>
+        <div class="header-bottom">
+            <div class="greeting">
+                <div class="greeting-img">
+                    <img class="acct-img lg" src="./img/man1.png" alt="">
                 </div>
-                <div class="acct-info">
-                    <img src="./img/notification-icon.svg" alt="">
+                <div class="greeting-txt">
+                    <p class="msg">Hi there,</p>
+                    <p class="usr">Morgan Oakley (@morgan)</p>
+                </div>
+            </div>
+            <div class="actions">
+                <button class="btn">New</button>
+                <button class="btn">Upload</button>
+                <button class="btn">Share</button>
+            </div>
+        </div>
+    </div>
+    <div class="sidebar">
+        <div class="sidebar-title">
+            <img src="./img/dashboard-icon.svg" alt="">
+            <h1>Dashboard</h1>
+        </div>
+        <div class="group-1">
+            <ul>
+                <li><img src="./img/home-icon.svg" alt="">Home</li>
+                <li><img src="./img/profile-icon.svg" alt="">Profile</li>
+                <li><img src="./img/messages-icon.svg" alt="">Messages</li>
+                <li><img src="./img/history-icon.svg" alt="">History</li>
+                <li><img src="./img/tasks-icon.svg" alt="">Tasks</li>
+                <li><img src="./img/communities-icon.svg" alt="">Communities</li>
+            </ul>
+        </div>
+        <div class="group-2">
+            <ul>
+                <li><img src="./img/settings-icon.svg" alt="">Settings</li>
+                <li><img src="./img/support-icon.svg" alt="">Support</li>
+                <li><img src="./img/privacy-icon.svg" alt="">Privacy</li>
+            </ul>
+        </div>
+    </div>
+    <div class="dashboard-area">
+        <div class="projects-area">
+            <h2>Your Projects</h2>
+            <div class="project-cards">
+                <div class="project card">
+                    <h3>Super Cool Project</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit atque accusantium
+                        corporis at aspernatur maiores modi nisi expedita rerum, sunt iste voluptate placeat
+                        accusamus dicta, quisquam, nesciunt ullam autem perspiciatis.</p>
+                    <img src="./img/add-favorites-icon.svg" alt="">
+                    <img src="./img/add-watchlist-icon.svg" alt="">
+                    <img src="./img/fork-icon.svg" alt="">
+                </div>
+                <div class="project card">
+                    <h3>Less Cool Project</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit atque accusantium
+                        corporis at aspernatur maiores modi nisi expedita rerum, sunt iste voluptate placeat
+                        accusamus dicta, quisquam, nesciunt ullam autem perspiciatis.</p>
+                    <img src="./img/add-favorites-icon.svg" alt="">
+                    <img src="./img/add-watchlist-icon.svg" alt="">
+                    <img src="./img/fork-icon.svg" alt="">
+                </div>
+                <div class="project card">
+                    <h3>Impossible App</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit atque accusantium
+                        corporis at aspernatur maiores modi nisi expedita rerum, sunt iste voluptate placeat
+                        accusamus dicta, quisquam, nesciunt ullam autem perspiciatis.</p>
+                    <img src="./img/add-favorites-icon.svg" alt="">
+                    <img src="./img/add-watchlist-icon.svg" alt="">
+                    <img src="./img/fork-icon.svg" alt="">
+                </div>
+                <div class="project card">
+                    <h3>Easy Peasy App</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit atque accusantium
+                        corporis at aspernatur maiores modi nisi expedita rerum, sunt iste voluptate placeat
+                        accusamus dicta, quisquam, nesciunt ullam autem perspiciatis.</p>
+                    <img src="./img/add-favorites-icon.svg" alt="">
+                    <img src="./img/add-watchlist-icon.svg" alt="">
+                    <img src="./img/fork-icon.svg" alt="">
+                </div>
+                <div class="project card">
+                    <h3>Ad Blocker</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit atque accusantium
+                        corporis at aspernatur maiores modi nisi expedita rerum, sunt iste voluptate placeat
+                        accusamus dicta, quisquam, nesciunt ullam autem perspiciatis.</p>
+                    <img src="./img/add-favorites-icon.svg" alt="">
+                    <img src="./img/add-watchlist-icon.svg" alt="">
+                    <img src="./img/fork-icon.svg" alt="">
+                </div>
+                <div class="project card">
+                    <h3>Money Maker</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit atque accusantium
+                        corporis at aspernatur maiores modi nisi expedita rerum, sunt iste voluptate placeat
+                        accusamus dicta, quisquam, nesciunt ullam autem perspiciatis.</p>
+                    <img src="./img/add-favorites-icon.svg" alt="">
+                    <img src="./img/add-watchlist-icon.svg" alt="">
+                    <img src="./img/fork-icon.svg" alt="">
+                </div>
+            </div>
+        </div>
+        <div class="announcements-area">
+            <h2>Announcements</h2>
+            <div class="announcements card">
+                <h3>Site Maintenance</h3>
+                <p>Vestibulum condimentum tellus lacus, in accumsan elit maximus ec. Donec hendrerit sodales
+                    congue...</p>
+                <h3>Community Share Day</h3>
+                <p>Nam vel lectus tincidunt, rutrum nulla eu, ornare libero. Aliquam dictum accumsan porttitor...
+                </p>
+                <h3>Update Privacy Policy</h3>
+                <p>Phasellus efficitur nisi eget elit consectetur, eget condimentum ante auctor. Cras fingilla
+                    sagittis seem in mattis...</p>
+            </div>
+        </div>
+        <div class="trending-area">
+            <h2>Trending</h2>
+            <div class="trending card">
+                <div class="user">
+                    <img class="acct-img sm" src="./img/woman1.png" alt="">
+                    <div class="usr-handle">@tegan</div>
+                    <div class="usr-title">World Peace Builder</div>
+                </div>
+                <div class="user">
                     <img class="acct-img sm" src="./img/man1.png" alt="">
-                    <p>Morgan Oakley</p>
+                    <div class="usr-handle">@morgan</div>
+                    <div class="usr-title">Super Cool Project</div>
                 </div>
-            </div>
-            <div class="header-bottom">
-                <div class="greeting">
-                    <div class="greeting-img">
-                        <img class="acct-img lg" src="./img/man1.png" alt="">
-                    </div>
-                    <div class="greeting-txt">
-                        <p>Hi there,</p>
-                        <p>Morgan Oakley (@morgan)</p>
-                    </div>
+                <div class="user">
+                    <img class="acct-img sm" src="./img/woman2.png" alt="">
+                    <div class="usr-handle">@kendall</div>
+                    <div class="usr-title">Life Changing App</div>
                 </div>
-                <div class="actions">
-                    <button class="btn">New</button>
-                    <button class="btn">Upload</button>
-                    <button class="btn">Share</button>
-                </div>
-            </div>
-        </div>
-        <div class="sidebar">
-            <div class="sidebar-title">
-                <img src="./img/dashboard-icon.svg" alt="">
-                <h1>Dashboard</h1>
-            </div>
-            <div class="group-1">
-                <ul>
-                    <li><img src="./img/home-icon.svg" alt="">Home</li>
-                    <li><img src="./img/profile-icon.svg" alt="">Profile</li>
-                    <li><img src="./img/messages-icon.svg" alt="">Messages</li>
-                    <li><img src="./img/history-icon.svg" alt="">History</li>
-                    <li><img src="./img/tasks-icon.svg" alt="">Tasks</li>
-                    <li><img src="./img/communities-icon.svg" alt="">Communities</li>
-                </ul>
-            </div>
-            <div class="group-2">
-                <ul>
-                    <li><img src="./img/settings-icon.svg" alt="">Settings</li>
-                    <li><img src="./img/support-icon.svg" alt="">Support</li>
-                    <li><img src="./img/privacy-icon.svg" alt="">Privacy</li>
-                </ul>
-            </div>
-        </div>
-        <div class="dashboard-area">
-            <div class="projects-area">
-                <h2>Your Projects</h2>
-                <div class="project-cards">
-                    <div class="project card">
-                        <h3>Super Cool Project</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit atque accusantium
-                            corporis at aspernatur maiores modi nisi expedita rerum, sunt iste voluptate placeat
-                            accusamus dicta, quisquam, nesciunt ullam autem perspiciatis.</p>
-                        <img src="./img/add-favorites-icon.svg" alt="">
-                        <img src="./img/add-watchlist-icon.svg" alt="">
-                        <img src="./img/fork-icon.svg" alt="">
-                    </div>
-                    <div class="project card">
-                        <h3>Less Cool Project</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit atque accusantium
-                            corporis at aspernatur maiores modi nisi expedita rerum, sunt iste voluptate placeat
-                            accusamus dicta, quisquam, nesciunt ullam autem perspiciatis.</p>
-                        <img src="./img/add-favorites-icon.svg" alt="">
-                        <img src="./img/add-watchlist-icon.svg" alt="">
-                        <img src="./img/fork-icon.svg" alt="">
-                    </div>
-                    <div class="project card">
-                        <h3>Impossible App</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit atque accusantium
-                            corporis at aspernatur maiores modi nisi expedita rerum, sunt iste voluptate placeat
-                            accusamus dicta, quisquam, nesciunt ullam autem perspiciatis.</p>
-                        <img src="./img/add-favorites-icon.svg" alt="">
-                        <img src="./img/add-watchlist-icon.svg" alt="">
-                        <img src="./img/fork-icon.svg" alt="">
-                    </div>
-                    <div class="project card">
-                        <h3>Easy Peasy App</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit atque accusantium
-                            corporis at aspernatur maiores modi nisi expedita rerum, sunt iste voluptate placeat
-                            accusamus dicta, quisquam, nesciunt ullam autem perspiciatis.</p>
-                        <img src="./img/add-favorites-icon.svg" alt="">
-                        <img src="./img/add-watchlist-icon.svg" alt="">
-                        <img src="./img/fork-icon.svg" alt="">
-                    </div>
-                    <div class="project card">
-                        <h3>Ad Blocker</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit atque accusantium
-                            corporis at aspernatur maiores modi nisi expedita rerum, sunt iste voluptate placeat
-                            accusamus dicta, quisquam, nesciunt ullam autem perspiciatis.</p>
-                        <img src="./img/add-favorites-icon.svg" alt="">
-                        <img src="./img/add-watchlist-icon.svg" alt="">
-                        <img src="./img/fork-icon.svg" alt="">
-                    </div>
-                    <div class="project card">
-                        <h3>Money Maker</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit atque accusantium
-                            corporis at aspernatur maiores modi nisi expedita rerum, sunt iste voluptate placeat
-                            accusamus dicta, quisquam, nesciunt ullam autem perspiciatis.</p>
-                        <img src="./img/add-favorites-icon.svg" alt="">
-                        <img src="./img/add-watchlist-icon.svg" alt="">
-                        <img src="./img/fork-icon.svg" alt="">
-                    </div>
-                </div>
-            </div>
-            <div class="announcements-area">
-                <h2>Announcements</h2>
-                <div class="announcements card">
-                    <h3>Site Maintenance</h3>
-                    <p>Vestibulum condimentum tellus lacus, in accumsan elit maximus ec. Donec hendrerit sodales
-                        congue...</p>
-                    <h3>Community Share Day</h3>
-                    <p>Nam vel lectus tincidunt, rutrum nulla eu, ornare libero. Aliquam dictum accumsan porttitor...
-                    </p>
-                    <h3>Update Privacy Policy</h3>
-                    <p>Phasellus efficitur nisi eget elit consectetur, eget condimentum ante auctor. Cras fingilla
-                        sagittis seem in mattis...</p>
-                </div>
-            </div>
-            <div class="trending-area">
-                <h2>Trending</h2>
-                <div class="trending card">
-                    <div class="user">
-                        <img class="acct-img sm" src="./img/woman1.png" alt="">
-                        <div class="usr-handle">@tegan</div>
-                        <div class="usr-title">World Peace Builder</div>
-                    </div>
-                    <div class="user">
-                        <img class="acct-img sm" src="./img/man1.png" alt="">
-                        <div class="usr-handle">@morgan</div>
-                        <div class="usr-title">Super Cool Project</div>
-                    </div>
-                    <div class="user">
-                        <img class="acct-img sm" src="./img/woman2.png" alt="">
-                        <div class="usr-handle">@kendall</div>
-                        <div class="usr-title">Life Changing App</div>
-                    </div>
-                    <div class="user">
-                        <img class="acct-img sm" src="./img/man2.png" alt="">
-                        <div class="usr-handle">@alex</div>
-                        <div class="usr-title">No Traffic Maker</div>
-                    </div>
+                <div class="user">
+                    <img class="acct-img sm" src="./img/man2.png" alt="">
+                    <div class="usr-handle">@alex</div>
+                    <div class="usr-title">No Traffic Maker</div>
                 </div>
             </div>
         </div>
