--- a/index.html
+++ b/index.html
@@ -71,54 +71,64 @@
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit atque accusantium
                         corporis at aspernatur maiores modi nisi expedita rerum, sunt iste voluptate placeat
                         accusamus dicta, quisquam, nesciunt ullam autem perspiciatis.</p>
-                    <img src="./img/add-favorites-icon.svg" alt="">
-                    <img src="./img/add-watchlist-icon.svg" alt="">
-                    <img src="./img/fork-icon.svg" alt="">
+                    <div class="card-icons">
+                        <img src="./img/add-favorites-icon.svg" alt="">
+                        <img src="./img/add-watchlist-icon.svg" alt="">
+                        <img src="./img/fork-icon.svg" alt="">
+                    </div>
                 </div>
                 <div class="project card">
                     <h3>Less Cool Project</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit atque accusantium
                         corporis at aspernatur maiores modi nisi expedita rerum, sunt iste voluptate placeat
                         accusamus dicta, quisquam, nesciunt ullam autem perspiciatis.</p>
-                    <img src="./img/add-favorites-icon.svg" alt="">
-                    <img src="./img/add-watchlist-icon.svg" alt="">
-                    <img src="./img/fork-icon.svg" alt="">
+                    <div class="card-icons">
+                        <img src="./img/add-favorites-icon.svg" alt="">
+                        <img src="./img/add-watchlist-icon.svg" alt="">
+                        <img src="./img/fork-icon.svg" alt="">
+                    </div>
                 </div>
                 <div class="project card">
                     <h3>Impossible App</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit atque accusantium
-                        corporis at aspernatur maiores modi nisi expedita rerum, sunt iste voluptate placeat
-                        accusamus dicta, quisquam, nesciunt ullam autem perspiciatis.</p>
-                    <img src="./img/add-favorites-icon.svg" alt="">
-                    <img src="./img/add-watchlist-icon.svg" alt="">
-                    <img src="./img/fork-icon.svg" alt="">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                    <div class="card-icons">
+                        <img src="./img/add-favorites-icon.svg" alt="">
+                        <img src="./img/add-watchlist-icon.svg" alt="">
+                        <img src="./img/fork-icon.svg" alt="">
+                    </div>
                 </div>
                 <div class="project card">
                     <h3>Easy Peasy App</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit atque accusantium
                         corporis at aspernatur maiores modi nisi expedita rerum, sunt iste voluptate placeat
                         accusamus dicta, quisquam, nesciunt ullam autem perspiciatis.</p>
-                    <img src="./img/add-favorites-icon.svg" alt="">
-                    <img src="./img/add-watchlist-icon.svg" alt="">
-                    <img src="./img/fork-icon.svg" alt="">
+                    <div class="card-icons">
+                        <img src="./img/add-favorites-icon.svg" alt="">
+                        <img src="./img/add-watchlist-icon.svg" alt="">
+                        <img src="./img/fork-icon.svg" alt="">
+                    </div>
                 </div>
                 <div class="project card">
                     <h3>Ad Blocker</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit atque accusantium
                         corporis at aspernatur maiores modi nisi expedita rerum, sunt iste voluptate placeat
                         accusamus dicta, quisquam, nesciunt ullam autem perspiciatis.</p>
-                    <img src="./img/add-favorites-icon.svg" alt="">
-                    <img src="./img/add-watchlist-icon.svg" alt="">
-                    <img src="./img/fork-icon.svg" alt="">
+                    <div class="card-icons">
+                        <img src="./img/add-favorites-icon.svg" alt="">
+                        <img src="./img/add-watchlist-icon.svg" alt="">
+                        <img src="./img/fork-icon.svg" alt="">
+                    </div>
                 </div>
                 <div class="project card">
                     <h3>Money Maker</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit atque accusantium
                         corporis at aspernatur maiores modi nisi expedita rerum, sunt iste voluptate placeat
                         accusamus dicta, quisquam, nesciunt ullam autem perspiciatis.</p>
-                    <img src="./img/add-favorites-icon.svg" alt="">
-                    <img src="./img/add-watchlist-icon.svg" alt="">
-                    <img src="./img/fork-icon.svg" alt="">
+                    <div class="card-icons">
+                        <img src="./img/add-favorites-icon.svg" alt="">
+                        <img src="./img/add-watchlist-icon.svg" alt="">
+                        <img src="./img/fork-icon.svg" alt="">
+                    </div>
                 </div>
             </div>
         </div>
