--- a/index.html
+++ b/index.html
@@ -135,15 +135,23 @@
         <div class="announcements-area">
             <h2>Announcements</h2>
             <div class="announcements card">
-                <h3>Site Maintenance</h3>
-                <p>Vestibulum condimentum tellus lacus, in accumsan elit maximus ec. Donec hendrerit sodales
-                    congue...</p>
-                <h3>Community Share Day</h3>
-                <p>Nam vel lectus tincidunt, rutrum nulla eu, ornare libero. Aliquam dictum accumsan porttitor...
-                </p>
-                <h3>Update Privacy Policy</h3>
-                <p>Phasellus efficitur nisi eget elit consectetur, eget condimentum ante auctor. Cras fingilla
-                    sagittis seem in mattis...</p>
+                <div class="announcement">
+                    <h3>Site Maintenance</h3>
+                    <p>Vestibulum condimentum tellus lacus, in accumsan elit maximus ec. Donec hendrerit sodales
+                        congue...</p>
+                </div>
+                <hr>
+                <div class="announcement">
+                    <h3>Community Share Day</h3>
+                    <p>Nam vel lectus tincidunt, rutrum nulla eu, ornare libero. Aliquam dictum accumsan porttitor...
+                    </p>
+                </div>
+                <hr>
+                <div class="announcement">
+                    <h3>Update Privacy Policy</h3>
+                    <p>Phasellus efficitur nisi eget elit consectetur, eget condimentum ante auctor. Cras fingilla
+                        sagittis seem in mattis...</p>
+                </div>
             </div>
         </div>
         <div class="trending-area">
