--- a/index.html
+++ b/index.html
@@ -131,6 +131,9 @@
                     </div>
                 </div>
             </div>
+            <div class="attribution">
+                Person icons created by Freepik - <a href="https://www.flaticon.com/free-icons/person" title="person icons">Flaticon</a>
+            </div>
         </div>
         <div class="announcements-area">
             <h2>Announcements</h2>
