Adjust header padding

--- a/index.html
+++ b/index.html
@@ -132,7 +132,8 @@
                 </div>
             </div>
             <div class="attribution">
-                Person icons created by Freepik - <a href="https://www.flaticon.com/free-icons/person" title="person icons">Flaticon</a>
+                Person icons created by Freepik - <a href="https://www.flaticon.com/free-icons/person"
+                    title="person icons">Flaticon</a>
             </div>
         </div>
         <div class="announcements-area">
